Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjNumberWrapped.quorum
class main
    action main
        Text t = 7.5
    end
end